--- a/admin.html
+++ b/admin.html
@@ -22,15 +22,8 @@
       --transition-fast: 0.25s ease;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      height: 100%;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { height: 100%; }
 
     body {
       font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -39,16 +32,18 @@
         radial-gradient(circle at bottom right, #ffe5f0 0%, transparent 55%),
         linear-gradient(135deg, var(--pink-soft), var(--cream));
       color: var(--dark-text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 1.5rem;
+      display: block;
+      padding: 1.1rem 0.9rem 1.4rem;
       overflow-x: hidden;
+
+      /* Fluid font */
+      font-size: clamp(12.5px, 3.2vw, 16px);
     }
 
     .admin-wrapper {
       width: 100%;
-      max-width: 980px;
+      max-width: min(480px, 100%);
+      margin: 0 auto;
       position: relative;
     }
 
@@ -57,7 +52,7 @@
       border-radius: var(--radius-large);
       box-shadow: var(--shadow-soft);
       border: 1px solid rgba(255, 255, 255, 0.9);
-      padding: 1.6rem 1.6rem 1.4rem;
+      padding: 1.3rem 1.05rem 1.15rem;
       position: relative;
       overflow: hidden;
     }
@@ -73,150 +68,123 @@
       pointer-events: none;
     }
 
-    .admin-inner {
-      position: relative;
-      z-index: 1;
-    }
+    .admin-inner { position: relative; z-index: 1; }
 
+    /* HEADER */
     .admin-header {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 0.5rem;
-      margin-bottom: 1.4rem;
+      gap: 0.55rem;
+      margin-bottom: 1.1rem;
       align-items: center;
     }
 
     .admin-title {
       display: flex;
       flex-direction: column;
-      gap: 0.15rem;
+      gap: 0.12rem;
     }
 
     .admin-title h1 {
-      font-size: 1.2rem;
+      font-size: 1.02rem;
       font-weight: 600;
       letter-spacing: 0.12em;
       text-transform: uppercase;
     }
 
     .admin-title span.sub {
-      font-size: 0.86rem;
+      font-size: 0.8rem;
       color: var(--muted-text);
     }
 
     .admin-logo {
       display: flex;
       align-items: center;
-      gap: 0.4rem;
-      font-size: 0.8rem;
+      gap: 0.35rem;
+      font-size: 0.78rem;
       letter-spacing: 0.14em;
       text-transform: uppercase;
       color: var(--muted-text);
+      white-space: nowrap;
     }
 
-    .admin-logo span.icon {
-      font-size: 1.2rem;
-    }
+    .admin-logo span.icon { font-size: 1.1rem; }
 
-    .admin-grid {
-      display: grid;
-      gap: 1.2rem;
-    }
-
-    @media (min-width: 780px) {
-      .admin-card {
-        padding: 1.8rem 1.9rem 1.7rem;
-      }
-      .admin-grid {
-        grid-template-columns: minmax(0, 1.15fr) minmax(0, 1.3fr);
-        gap: 1.6rem;
-      }
-    }
+    /* GRID */
+    .admin-grid { display: grid; gap: 1rem; }
 
     .panel {
-      background: rgba(255, 255, 255, 0.88);
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 18px;
       border: 1px solid rgba(255, 255, 255, 0.95);
-      padding: 1rem 1rem 0.9rem;
+      padding: 0.9rem 0.85rem 0.85rem;
     }
 
     .panel-title {
-      font-size: 0.82rem;
+      font-size: 0.8rem;
       text-transform: uppercase;
       letter-spacing: 0.12em;
       color: var(--rose-gold);
-      margin-bottom: 0.65rem;
+      margin-bottom: 0.55rem;
       display: flex;
       align-items: center;
       gap: 0.3rem;
     }
 
-    .panel-title span.icon {
-      font-size: 1rem;
-    }
+    .panel-title span.icon { font-size: 1rem; }
 
-    .form-group {
-      margin-bottom: 0.75rem;
-    }
+    /* FORM */
+    .form-group { margin-bottom: 0.7rem; }
 
     .form-label {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      font-size: 0.82rem;
+      font-size: 0.8rem;
       margin-bottom: 0.15rem;
+      gap: 0.2rem;
     }
 
-    .form-label span.main {
-      font-weight: 500;
-    }
+    .form-label span.main { font-weight: 500; }
+    .form-label span.helper { font-size: 0.72rem; color: var(--muted-text); }
 
-    .form-label span.helper {
-      font-size: 0.74rem;
-      color: var(--muted-text);
-    }
-
-    input[type="text"],
-    select {
+    input[type="text"], select {
       width: 100%;
       border-radius: 999px;
       border: 1px solid rgba(199,146,127,0.4);
-      padding: 0.52rem 0.75rem;
-      font-size: 0.86rem;
+      padding: 0.48rem 0.75rem;
+      font-size: 0.84rem;
       outline: none;
       background: rgba(255,255,255,0.95);
       transition: border 0.2s ease, box-shadow 0.2s ease;
     }
 
-    input[type="text"]:focus,
-    select:focus {
+    input[type="text"]:focus, select:focus {
       border-color: var(--rose-gold);
       box-shadow: 0 0 0 1px rgba(199,146,127,0.35);
     }
 
     .inline-row {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 0.6rem;
+      grid-template-columns: 1fr;
+      gap: 0.55rem;
     }
 
-    .lang-row {
-      margin-top: 0.35rem;
-    }
+    .lang-row { margin-top: 0.35rem; }
 
     .lang-chip-row {
       display: flex;
       flex-wrap: wrap;
       gap: 0.4rem;
-      margin-top: 0.3rem;
+      margin-top: 0.25rem;
     }
 
     .lang-chip {
       border-radius: 999px;
       border: 1px solid rgba(199,146,127,0.4);
-      padding: 0.2rem 0.55rem;
-      font-size: 0.78rem;
+      padding: 0.18rem 0.52rem;
+      font-size: 0.76rem;
       letter-spacing: 0.06em;
       text-transform: uppercase;
       background: rgba(255,255,255,0.9);
@@ -232,34 +200,32 @@
       border-color: transparent;
     }
 
+    /* PREVIEW */
     .preview-block {
       margin-top: 0.4rem;
       border-radius: 14px;
       border: 1px dashed rgba(199,146,127,0.4);
-      padding: 0.55rem 0.7rem;
-      font-size: 0.82rem;
-      background: rgba(255,250,252,0.9);
+      padding: 0.5rem 0.65rem;
+      font-size: 0.8rem;
+      background: rgba(255,250,252,0.94);
       color: var(--muted-text);
     }
 
     .preview-label {
-      font-size: 0.74rem;
+      font-size: 0.72rem;
       text-transform: uppercase;
       letter-spacing: 0.12em;
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.18rem;
       opacity: 0.85;
     }
 
-    .preview-text strong {
-      color: var(--rose-gold);
-    }
+    .preview-text strong { color: var(--rose-gold); }
 
-    .link-block {
-      margin-bottom: 0.8rem;
-    }
+    /* LINKS */
+    .link-block { margin-bottom: 0.8rem; }
 
     .link-label {
-      font-size: 0.8rem;
+      font-size: 0.78rem;
       text-transform: uppercase;
       letter-spacing: 0.12em;
       color: var(--muted-text);
@@ -268,17 +234,24 @@
 
     .link-row {
       display: flex;
+      flex-direction: column;
       gap: 0.4rem;
       align-items: stretch;
     }
 
     .link-input {
       flex: 1;
-      font-size: 0.78rem;
+      font-size: 0.76rem;
       border-radius: 999px;
       border: 1px solid rgba(199,146,127,0.4);
-      padding: 0.45rem 0.7rem;
+      padding: 0.42rem 0.65rem;
       background: rgba(255,255,255,0.95);
+
+      /* ✅ đảm bảo không tràn */
+      display: block;
+      max-width: 100%;
+
+      /* desktop/tablet vẫn 1 dòng gọn */
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -287,8 +260,8 @@
     .btn-copy {
       border-radius: 999px;
       border: none;
-      padding: 0.4rem 0.9rem;
-      font-size: 0.78rem;
+      padding: 0.38rem 0.9rem;
+      font-size: 0.76rem;
       font-weight: 600;
       letter-spacing: 0.06em;
       text-transform: uppercase;
@@ -297,35 +270,32 @@
       cursor: pointer;
       display: inline-flex;
       align-items: center;
+      justify-content: center;
       gap: 0.28rem;
       box-shadow: 0 8px 18px rgba(0,0,0,0.18);
       transition: transform var(--transition-fast), box-shadow var(--transition-fast);
       white-space: nowrap;
     }
 
-    .btn-copy:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 10px 24px rgba(0,0,0,0.22);
-    }
-
-    .btn-copy:active {
-      transform: translateY(1px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.2);
-    }
+    .btn-copy:hover { transform: translateY(-1px); box-shadow: 0 10px 24px rgba(0,0,0,0.22); }
+    .btn-copy:active { transform: translateY(1px); box-shadow: 0 6px 14px rgba(0,0,0,0.2); }
 
     .small-note {
-      font-size: 0.75rem;
+      font-size: 0.74rem;
       color: var(--muted-text);
-      margin-top: 0.3rem;
+      margin-top: 0.28rem;
+      line-height: 1.5;
     }
 
+    /* TOAST */
     .toast {
       position: fixed;
       bottom: 14px;
-      right: 14px;
+      left: 12px;
+      right: 12px;
       background: rgba(0,0,0,0.85);
       color: #fff;
-      font-size: 0.8rem;
+      font-size: 0.78rem;
       padding: 0.5rem 0.85rem;
       border-radius: 999px;
       opacity: 0;
@@ -333,23 +303,162 @@
       pointer-events: none;
       transition: opacity 0.25s ease, transform 0.25s ease;
       z-index: 90;
+      text-align: center;
     }
 
-    .toast.show {
-      opacity: 1;
-      transform: translateY(0);
+    .toast.show { opacity: 1; transform: translateY(0); }
+
+    /* =========================
+       RESPONSIVE
+       ========================= */
+
+    @media (max-width: 340px) {
+      body { padding: 0.9rem 0.6rem 1.2rem; }
+      .admin-wrapper { max-width: 360px; }
+      .admin-card { padding: 1.1rem 0.85rem 1rem; border-radius: 20px; }
+      .admin-title h1 { font-size: 0.95rem; letter-spacing: 0.08em; }
+      .admin-title span.sub { font-size: 0.76rem; }
+      .admin-logo { font-size: 0.7rem; letter-spacing: 0.1em; }
+      .form-label { font-size: 0.76rem; }
+      .form-label span.helper { font-size: 0.68rem; }
+      input[type="text"], select { font-size: 0.78rem; padding: 0.42rem 0.7rem; }
+      .preview-block { font-size: 0.76rem; }
+      .link-label { font-size: 0.74rem; }
+      .link-input { font-size: 0.72rem; }
+      .small-note { font-size: 0.7rem; }
     }
 
-    @media (max-width: 520px) {
-      .admin-card {
-        padding: 1.3rem 1.3rem 1.2rem;
-      }
-      .link-row {
+    @media (min-width: 341px) and (max-width: 410px) {
+      body { padding: 1.05rem 0.85rem 1.45rem; }
+      .admin-wrapper { max-width: 430px; }
+      .admin-card { padding: 1.22rem 0.98rem 1.15rem; }
+      .admin-title h1 { font-size: 0.98rem; letter-spacing: 0.09em; }
+      .admin-title span.sub { font-size: 0.78rem; }
+      .form-label { font-size: 0.78rem; }
+      .form-label span.helper { font-size: 0.7rem; }
+      input[type="text"], select { font-size: 0.8rem; }
+      .preview-block { font-size: 0.78rem; padding: 0.45rem 0.6rem; }
+      .link-label { font-size: 0.76rem; }
+      .link-input { font-size: 0.74rem; }
+      .small-note { font-size: 0.72rem; }
+    }
+
+    @media (min-width: 411px) and (max-width: 450px) {
+      body { padding: 1.1rem 0.9rem 1.55rem; }
+      .admin-wrapper { max-width: 460px; }
+      .admin-card { padding: 1.25rem 1rem 1.18rem; }
+      .admin-title h1 { font-size: 0.98rem; letter-spacing: 0.08em; }
+      .admin-title span.sub { font-size: 0.78rem; }
+      .form-label { font-size: 0.78rem; }
+      .form-label span.helper { font-size: 0.7rem; }
+      input[type="text"], select { font-size: 0.8rem; }
+      .preview-block { font-size: 0.78rem; padding: 0.45rem 0.6rem; }
+      .link-label { font-size: 0.76rem; }
+      .link-input { font-size: 0.74rem; }
+      .btn-copy { font-size: 0.74rem; }
+      .small-note { font-size: 0.72rem; }
+    }
+
+    /* ✅ CHỐT HẠ MOBILE + FIX HEADER */
+    @media (max-width: 450px) {
+      body { padding: 1rem 0.75rem 1.4rem; }
+
+      .admin-card { padding: 1.15rem 0.95rem 1.05rem; }
+
+      .admin-header {
         flex-direction: column;
-      }
-      .btn-copy {
         justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 0.35rem;
       }
+      .admin-title { align-items: center; }
+
+      .admin-title h1 {
+        font-size: clamp(0.92rem, 3.1vw, 1.02rem);
+        letter-spacing: 0.08em;
+      }
+      .admin-title span.sub {
+        font-size: clamp(0.74rem, 2.6vw, 0.82rem);
+      }
+      .admin-logo {
+        justify-content: center;
+        font-size: 0.72rem;
+        letter-spacing: 0.1em;
+      }
+
+      .panel-title { font-size: 0.75rem; }
+      .form-label { font-size: 0.76rem; }
+      input[type="text"], select { font-size: 0.8rem; }
+
+      /* ✅ KIỂU A: LINK WRAP */
+      .link-row { flex-direction: column !important; }
+
+      .link-input {
+        font-size: 0.68rem !important;
+        line-height: 1.35;
+        white-space: normal !important;
+        overflow: visible !important;
+        text-overflow: clip !important;
+        overflow-wrap: anywhere;
+        word-break: break-word;
+        padding: 0.48rem 0.7rem;
+
+        /* ✅ khi wrap nhiều dòng, bo góc mềm đẹp hơn pill */
+        border-radius: 16px !important;
+      }
+
+      .btn-copy {
+        width: 100%;
+        justify-content: center;
+        font-size: 0.72rem !important;
+      }
+
+      .link-label { font-size: 0.74rem; }
+      .small-note { font-size: 0.72rem; }
+    }
+
+    /* TABLET */
+    @media (min-width: 451px) and (max-width: 899px) {
+      body { padding: 1.5rem 1.4rem 1.8rem; }
+      .admin-wrapper { max-width: 720px; }
+      .admin-card { padding: 1.6rem 1.4rem 1.4rem; }
+      .inline-row { grid-template-columns: 1fr 1fr; }
+      .link-row { flex-direction: row; align-items: stretch; }
+    }
+
+    /* DESKTOP */
+    @media (min-width: 900px) {
+      body {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+        font-size: 16px;
+      }
+      .admin-wrapper { max-width: 980px; }
+      .admin-card { padding: 1.9rem 1.9rem 1.7rem; border-radius: 26px; }
+      .admin-header { margin-bottom: 1.6rem; }
+      .admin-title h1 { font-size: 1.3rem; letter-spacing: 0.12em; }
+      .admin-title span.sub { font-size: 0.9rem; }
+      .admin-grid {
+        grid-template-columns: minmax(0, 1.15fr) minmax(0, 1.3fr);
+        gap: 1.6rem;
+      }
+      .panel { padding: 1.05rem 1.1rem 1rem; }
+      .form-label { font-size: 0.86rem; }
+      input[type="text"], select { font-size: 0.9rem; padding: 0.55rem 0.8rem; }
+      .link-input { font-size: 0.78rem; }
+      .link-row { flex-direction: row; }
+      .toast { left: auto; right: 18px; min-width: 220px; }
+    }
+
+    @media (min-width: 1200px) {
+      body { padding: 2.4rem; }
+      .admin-wrapper { max-width: 1040px; }
+      .admin-card { border-radius: 30px; }
+      .admin-title h1 { font-size: 1.35rem; }
     }
   </style>
 </head>
@@ -498,23 +607,18 @@
     const detailDisplay = document.getElementById('detail-link-display');
     const toast = document.getElementById('toast');
 
-    // Khởi tạo base URL: lấy origin + path thư mục + index.html
     (function initBaseUrl() {
       const { origin, pathname } = window.location;
-      const basePath = pathname.replace(/[^\/]+$/, ''); // bỏ tên file admin.html
+      const basePath = pathname.replace(/[^\/]+$/, '');
       const baseIndex = origin + basePath + 'index.html';
       baseUrlInput.value = baseIndex;
     })();
 
-    // Text lời mời theo ngôn ngữ
     function getInvitePrefix(lang) {
       switch (lang) {
-        case 'en':
-          return 'We warmly invite';
-        case 'ru':
-          return 'С тёплым приглашением для';
-        default:
-          return 'Trân trọng kính mời';
+        case 'en': return 'We warmly invite';
+        case 'ru': return 'С тёплым приглашением для';
+        default: return 'Trân trọng kính mời';
       }
     }
 
@@ -526,22 +630,19 @@
       const prefix = getInvitePrefix(lang);
 
       let nameDisplay = guest || 'GUEST NAME';
-      if (title) {
-        nameDisplay = title + ' ' + nameDisplay;
-      }
+      if (title) nameDisplay = title + ' ' + nameDisplay;
 
       previewText.innerHTML = `${prefix} <strong>${nameDisplay}</strong>`;
     }
 
     function buildLinks() {
       const baseIndex = baseUrlInput.value.trim() || 'index.html';
-      // suy ra wedding-detail từ baseIndex
+
       let detailBase;
       try {
         const urlObj = new URL(baseIndex);
         detailBase = urlObj.origin + urlObj.pathname.replace(/index\.html?$/i, 'wedding-detail.html');
       } catch {
-        // nếu không phải full URL, dùng relative
         detailBase = 'wedding-detail.html';
       }
 
@@ -571,7 +672,6 @@
     guestInput.addEventListener('input', refreshAll);
     titleSelect.addEventListener('change', refreshAll);
     langSelect.addEventListener('change', () => {
-      // sync với chips
       const currentLang = langSelect.value;
       langChips.forEach(chip => {
         chip.classList.toggle('active', chip.dataset.lang === currentLang);
@@ -590,7 +690,6 @@
       });
     });
 
-    // Copy link
     document.querySelectorAll('.btn-copy').forEach(btn => {
       btn.addEventListener('click', async () => {
         const targetId = btn.getAttribute('data-copy-target');
@@ -603,7 +702,6 @@
           if (navigator.clipboard && navigator.clipboard.writeText) {
             await navigator.clipboard.writeText(text);
           } else {
-            // fallback
             const temp = document.createElement('textarea');
             temp.value = text;
             document.body.appendChild(temp);
@@ -623,12 +721,9 @@
       if (!toast) return;
       toast.textContent = msg;
       toast.classList.add('show');
-      setTimeout(() => {
-        toast.classList.remove('show');
-      }, 1800);
+      setTimeout(() => toast.classList.remove('show'), 1800);
     }
 
-    // Khởi tạo lần đầu
     refreshAll();
   </script>
 </body>
